--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-popper": "^2.2.4",
     "react-scripts": "4.0.1",
+    "react-use": "^15.3.4",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
